JS-654: fixed width in link to object covers

--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -33,7 +33,7 @@
 				.txt { width: 100%; }
 			}
 
-			.cover { position: relative; min-height: 116px; background-color: unset; }
+			.cover { position: relative; min-height: 90px; height: 100%; background-color: unset; }
 			.cardName { display: flex; flex-direction: row; gap: 0px 6px; align-items: center; }
 			.cardName .name  { transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out; }
 			.cardDescription { @include text-small; line-height: 16px; @include clamp2; margin: 2px 0px 0px 0px; }
@@ -110,10 +110,10 @@
 
 		.linkCard.withCover {
 			.side.left {
-				width: calc(100% - 236px); border-radius: 16px 0px 0px 16px; border-right-width: 0px;
+				width: calc(100% - 200px); border-radius: 16px 0px 0px 16px; border-right-width: 0px;
 				display: flex; align-items: center;
 			}
-			.side.right { width: 236px; display: block; border: 1px solid $colorBorderDark; }
+			.side.right { width: 200px; min-height: 90px; height: 100%; display: block; border: 1px solid $colorBorderDark; }
 		}
 
 		.linkCard.vertical { display: block; }
